--- a/ranzhi/.classpath
+++ b/ranzhi/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="lib/log4j-core-2.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/org.testng_6.12.0.r201709030044.jar"/>
 	<classpathentry kind="lib" path="lib/org.testng.source_6.12.0.r201709030044.jar"/>
+	<classpathentry kind="lib" path="lib/saxon-8.7.jar"/>
+	<classpathentry kind="lib" path="lib/SaxonLiaison.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
